<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:scrollbars="vertical">
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logoDesc"
        android:src="@drawable/note" />
    <EditText
        android:id="@+id/etxtUsername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/etxtUsername"
        android:layout_below="@id/imgLogo"
        />
    <EditText
        android:id="@+id/etxtEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/etxtEmail"
        android:layout_below="@id/etxtUsername"
        />
    <EditText 
        android:id="@+id/etxtPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/etxtPassword"
        android:layout_below="@id/etxtEmail"
        />
    <EditText 
        android:id="@+id/etxtPassword2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/etxtPassword2"
        android:layout_below="@id/etxtPassword"
        />
    <Button
        android:id="@+id/btnSignup"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:text="@string/btnSignup"
        android:layout_below="@id/etxtPassword2"
        android:layout_centerHorizontal="true"
        />
</RelativeLayout>