<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/darker_gray"
    android:orientation="vertical"
    android:weightSum="1.0" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:drawable/status_bar_item_app_background"
        android:orientation="horizontal"
        android:gravity="right"
        android:weightSum="1" >
        <TextView 
            android:layout_width="0dip"
            android:layout_weight="0.4"
            android:layout_height="match_parent"
            android:text="@string/memo"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="25sp"
            />
        <Button
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:layout_height="wrap_content"
        	android:background="@drawable/ic_action_share"
        	android:layout_marginLeft="10dp"
        	android:layout_marginRight="10dp"
            android:textSize="17sp" 
            />
        <Button
            android:id="@+id/b3"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="0.2"
            android:background="@android:drawable/status_bar_item_app_background"
            android:text="@string/cancel"
            android:textSize="17sp" />

        <Button
            android:id="@+id/b2"
            android:layout_width="0dip"
            android:gravity="center_vertical|center_horizontal"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@android:drawable/status_bar_item_app_background"
            android:text="@string/save"
            android:textSize="17sp" />


        

        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/titleo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:inputType="text"
            android:text="@string/Title"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/conto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:text="@string/Con"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>